2001-05-09  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keyactions.cc: applied Telemachos' patches for showing inventory

2001-05-08  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* objs.cc: added a ton of special item names for SI
	
2001-05-08  Ryan Nunn <triforce@merlin.net.au>
	* gamewin.h, gamedat.cc, Gumps/Newfile_gump.h: Fixed byte ordering 
	  problem with savegame info for Savegump. Savegame info is now cross
	  platform compatible.

2001-05-07  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* objs/objs.cc: add special name for gold sextant (TODO: same for SI)
	* ucsched.cc: guessing at 0x0c opcode. probably used for nesting loops.
	
2001-05-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* ucsched.cc: changed 0x0b, 0x0c and 0x4d scheduled opcodes (fixing SI gates & wells)

2001-05-06  Jeff Freedman  <jeff@amy.nerble.net>

	* Implemented caltrops.  Fixed energy-field animation.

2001-05-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* ucsched.cc: changed scheduled usecode 0x0b loop behaviour

2001-05-05  Jeff Freedman  <jeff@amy.nerble.net>

	* Working on server.  It's now polled in the main loop
	(Server_delay()) in XWIN builds.  (Doesn't do anything useful yet.)

2001-05-03  Tristan Tarrant  <nadir@users.sourceforge.net>

	* exult.cc: Chnaged from "X-windows Ultima 7 map browser" to 
	  "Multiplatform Ultima 7 game engine" :)

2001-05-03  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed FoV and resurrection bugs.
	* ExultStudio:  Open egg editor.  Use
	'glade_xml_signal_autoconnect()' to set up signal handlers.

2001-05-02  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq/faq_html.xsl: begin counting sections at 0 to make room for changes
	* docs/faq/exult_faq.xml: FAQ updated see FAQ for details
	* FAQ: updated
	* my first CVS commit
	
2001-05-02  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gumps/gump_utils.cc: undo end_gump_mode with a modal gump
	* mapedit/Makefile.studio.cygwin: committed Travis' changes
